First Sprites. First GUI testing.